# iridium-engine

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.deps  README.md  run.sh
.circleci/: config.yml
.logging/: conf.yaml
apps/: CMakeLists.txt  main.cpp  position.cpp  position.hpp  simulate.cpp  simulate.hpp
cmake/: IridiumTargetDeps.cmake
include/iridium/: account.hpp  algorithm.hpp  calendar.hpp  csv.hpp  data.hpp  forex.hpp  instrument.hpp  logging.hpp  order.hpp  trade.hpp  util.hpp
live-trading/: CMakeLists.txt  Oanda.cpp  Oanda.hpp  apiclient.cpp  apiclient.hpp  email.cpp  email.hpp  live-trading.cpp
src/: CMakeLists.txt  account.cpp  calendar.cpp  data.cpp  forex.cpp  instrument.cpp  logging.cpp  order.cpp  trade.cpp  util.cpp
strategy/include/: indicator.hpp  position.hpp  simulate.hpp
strategy/src/: CMakeLists.txt  indicator.cpp  position.cpp  simulate.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  alg_test.cpp  calendar_test.cpp  forex_test.cpp  instrument_test.cpp  main.cpp
